--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 </head>
 <body>
     <div class="bannerPic">
-        <img src="bannerpicture.JPG" alt="Image Error" title="Picture of Christian Hanson and his wife">
+        <img src="./Files/bannerpicture.JPG" alt="Image Error" title="Picture of Christian Hanson and his wife">
     </div>
+<article id="rightHalf">
     <div class="about">
             <p>Christian Hanson is an <em>aspiring</em> software developer with previous background in data analytics. He has worked with small companies like Paycor, medium sized organizations like Indiana University, and large companies like Tesla Motors.</p>
             <a href="#">More about Christian</a>
     </div>
-
+</article>
 </body>
 </html>
