--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="bannerPic">
@@ -16,8 +17,30 @@
     </div>
 <article id="rightHalf">
     <div class="about">
-            <p>Christian Hanson is an <em>aspiring</em> software developer with previous background in data analytics. He has worked with small companies like Paycor, medium sized organizations like Indiana University, and large companies like Tesla Motors.</p>
-            <a href="#">More about Christian</a>
+        <p>Christian Hanson is an <em>aspiring</em> software developer with previous background in data analytics. He has worked with small companies like Paycor, medium sized organizations like Indiana University, and large companies like Tesla Motors.</p>
+        <br>
+        <a href="#">More about Christian</a>
+    </div>
+    <br>
+    <br>
+    <br>
+    <div class="projects">
+        <p>Example of some projects that Christian has worked on are:</p>
+        <ul class="project-list">
+            <li>Power BI data visualizations</li>
+            <li>Python correlation testing</li>
+            <li>SQL querying</li>
+            <li>Python Machine Learning models</li>
+            <li>The Codecademy Full Stack Developer Certification</li>
+            <li><em>This</em> portfolio website</li>
+        </ul>
+    </div>
+    <br>
+    <br>
+    <br>
+    <div class="social">
+    <a href="https://www.linkedin.com/in/christianhansonn/" class="fa fa-linkedin" title="LinkedIn"></a>
+    <a href="mailto:christian.hanson3@gmail.com" class="fa fa-google" title="Gmail"></a>
     </div>
 </article>
 </body>
