--- a/index.html
+++ b/index.html
@@ -17,30 +17,31 @@
     </div>
 <article id="rightHalf">
     <div class="about">
-        <p>Christian Hanson is an <em>aspiring</em> software developer with previous background in data analytics. He has worked with small companies like Paycor, medium sized organizations like Indiana University, and large companies like Tesla Motors.</p>
         <br>
-        <a href="#">More about Christian</a>
+        <p>Christian Hanson is an <em>aspiring</em> software developer with previous background in data analytics. He has worked with small companies like Paycor, and large oganizations and Fortune 500 companies like Indiana University and Tesla Motors.</p>
+        <br>
+        <br>
     </div>
     <br>
     <br>
     <br>
     <div class="projects">
-        <p>Example of some projects that Christian has worked on are:</p>
+        <p>Example of some projects that Christian has done are:</p>
         <ul class="project-list">
-            <li>Power BI data visualizations</li>
-            <li>Python correlation testing</li>
+            <li>Codecademy Full Stack Developer Certification</li>
             <li>SQL querying</li>
             <li>Python Machine Learning models</li>
-            <li>The Codecademy Full Stack Developer Certification</li>
-            <li><em>This</em> portfolio website</li>
+            <li>Power BI data visualizations</li>
+            <li><u><em>This</em></u> portfolio website</li>
         </ul>
     </div>
     <br>
-    <br>
-    <br>
     <div class="social">
+    <p>Links:</p>
     <a href="https://www.linkedin.com/in/christianhansonn/" class="fa fa-linkedin" title="LinkedIn"></a>
     <a href="mailto:christian.hanson3@gmail.com" class="fa fa-google" title="Gmail"></a>
+    <a href="https://github.com/christianhansonn/PortfolioProject" class="fa fa-github" title="GitHub Portfolio Project"></a>
+    <a href="#" class="fa fa-file" title="Resume"></a>
     </div>
 </article>
 </body>
