Ready for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     <br>
     <div class="social">
     <p>Links:</p>
-    <a href="https://www.linkedin.com/in/christianhansonn/" class="fa fa-linkedin" title="LinkedIn"></a>
-    <a href="mailto:christian.hanson3@gmail.com" class="fa fa-google" title="Gmail"></a>
-    <a href="https://github.com/christianhansonn/PortfolioProject" class="fa fa-github" title="GitHub Portfolio Project"></a>
-    <a href="#" class="fa fa-file" title="Resume"></a>
+    <a href="https://www.linkedin.com/in/christianhansonn/" class="fa fa-linkedin" title="LinkedIn" target="_blank"></a>
+    <a href="mailto:christian.hanson3@gmail.com" class="fa fa-google" title="Gmail" target="_blank"></a>
+    <a href="https://github.com/christianhansonn/PortfolioProject" class="fa fa-github" title="GitHub Portfolio Project" target="_blank"></a>
+    <a href="./Files/Hanson Resume.pdf" class="fa fa-file" title="Resume" target="_blank"></a>
     </div>
 </article>
 </body>
