--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <article id="rightHalf">
     <div class="about">
         <br>
-        <p>Christian Hanson is an <em>aspiring</em> software developer with previous background in data analytics. He has worked with small companies like Paycor, and large oganizations and Fortune 500 companies like Indiana University and Tesla Motors.</p>
+        <p>Christian Hanson is an experienced analyst with a background in payroll data and process analysis and imporvement. He has worked with small companies like Paycor, and large oganizations and Fortune 500 companies like Indiana University and Tesla Motors.</p>
         <br>
         <br>
     </div>
