--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="projects">
         <p>Example of some projects that Christian has done are:</p>
         <ul class="project-list">
-            <li>Codecademy Full Stack Developer Certification</li>
+            <li>Python Data Analysis Certifications</li>
             <li>SQL querying</li>
             <li>Python Machine Learning models</li>
             <li>Power BI data visualizations</li>
