--- a/index.html
+++ b/index.html
@@ -19,21 +19,25 @@
 <article id="rightHalf">
     <div class="about">
         <br>
-        <p>Christian Hanson is an experienced analyst with a background in payroll data and process analysis and imporvement. He has worked with small companies like Paycor, and large oganizations and Fortune 500 companies like Indiana University and Tesla Motors.</p>
+        <p>Christian Hanson is an experienced data and business analyst with a background in: data analysis, RPA, machine learning, automating test cases, process analysis and improvement, and data visualizations. He has worked as a Consultant to state and local governments, and as an analyst for publicly traded companies like Tesla and Paycor.</p>
         <br>
         <br>
     </div>
     <br>
     <br>
     <br>
-    <div class="projects">
-        <p>Example of some projects that Christian has done are:</p>
-        <ul class="project-list">
-            <li>Python Data Analysis Certifications</li>
-            <li>SQL querying</li>
-            <li>Python Machine Learning models</li>
-            <li>Power BI data visualizations</li>
-            <li><u><em>This</em></u> portfolio website</li>
+    <div class="skills">
+        <p>Example of some technologies and certifications Christian has utilized are:</p>
+        <ul class="skill-list">
+            <li><a href="https://www.credly.com/badges/802048a5-2802-46cf-bb82-874b94ba7b4e/linked_in_profile">AWS Certified Solutions Architect - Associate</a></li>
+            <li>Python</li>
+            <li>SQL</li>
+            <li>Power BI / Tableau</li>
+            <li>Salesforce</li>
+            <li>Node.js</li>
+            <li>Machine Learning</li>
+            <li>Azure</li>
+            <li>Snowflake</li>
         </ul>
     </div>
     <br>
