--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 <article id="rightHalf">
     <div class="about">
         <br>
-        <p>Christian Hanson is an experienced data and business analyst with a background in: data analysis, RPA, machine learning, automating test cases, process analysis and improvement, and data visualizations. He has worked as a Consultant to state and local governments, and as an analyst for publicly traded companies like Tesla and Paycor.</p>
+        <p>Christian Hanson is an experienced data and business analyst with a background in: data analysis, RPA, machine learning, automating test cases, process analysis and improvement, and data visualizations. </p>
+        <br>
+        <p>He has worked as a Consultant to state and local governments, and as an analyst for publicly traded companies like Tesla and Paycor.</p>
         <br>
         <br>
     </div>
