--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="bannerPic">
-        <img src="./Files/bannerpicture.JPG" alt="Image Error" title="Picture of Christian Hanson and his wife">
+        <img alt="Image Error" title="Picture of Christian Hanson and his wife">
     </div>
 <article id="rightHalf">
     <div class="about">
