--- a/index.html
+++ b/index.html
@@ -17,31 +17,14 @@
     </div>
 <article id="rightHalf">
     <div class="about">
-        <br>
-        <p>Christian Hanson is an experienced data and business analyst with a background in: data analysis, RPA, machine learning, automating test cases, process analysis and improvement, and data visualizations. </p>
-        <br>
-        <p>He has worked as a Consultant to state and local governments, and as an analyst for publicly traded companies like Tesla and Paycor.</p>
-        <br>
-        <br>
-    </div>
-    <br>
-    <br>
-    <br>
-    <div class="skills">
-        <p>Example of some technologies and certifications Christian has utilized are:</p>
-        <ul class="skill-list">
-            <li><a href="https://www.credly.com/badges/802048a5-2802-46cf-bb82-874b94ba7b4e/linked_in_profile">AWS Certified Solutions Architect - Associate</a></li>
-            <li>Python</li>
-            <li>SQL</li>
-            <li>Power BI / Tableau</li>
-            <li>Salesforce</li>
-            <li>Node.js</li>
-            <li>Machine Learning</li>
-            <li>Azure</li>
-            <li>Snowflake</li>
-        </ul>
-    </div>
-    <br>
+        <p>Christian Hanson is a seasoned Business and Data Analyst with expertise in data analysis, cloud computing, machine learning, automated testing, and data visualization. His diverse skill set includes architecting fault-tolerant data pipelines, designing cloud-based warehousing solutions, and developing comprehensive automated testing frameworks.</p>
+        </div>
+        <div class="secondary_about">    
+        <p>Christian has a proven track record of delivering innovative solutions to complex data migration challenges and enhancing operational efficiency for clients, including consulting for state and local governments, as well as renowned companies like Tesla and Paycor.</p>
+        </div>
+        <div class="third_about">    
+        <p>For proof of excellence, please follow the links below to Christian's LinkedIn and Portfolio Project.</p>
+        </div>
     <div class="social">
     <a href="https://www.linkedin.com/in/christianhansonn/" class="fa fa-linkedin" title="LinkedIn" target="_blank"></a>
     <a href="mailto:christian.hanson3@gmail.com" class="fa fa-google" title="Gmail" target="_blank"></a>
