--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 <article id="rightHalf">
     <div class="about">
-        <p>Christian Hanson is a seasoned Business and Data Analyst with expertise in data analysis, cloud computing, machine learning, automated testing, and data visualization. His diverse skill set includes architecting fault-tolerant data pipelines, designing cloud-based warehousing solutions, and developing comprehensive automated testing frameworks.</p>
+        <p>Christian Hanson is an AWS Certified Business and Data Analyst with expertise in data analysis, cloud computing, machine learning, automated testing, and data visualization. His diverse skill set includes architecting fault-tolerant data pipelines, designing cloud-based warehousing solutions, and developing comprehensive automated testing frameworks.</p>
         </div>
         <div class="secondary_about">    
         <p>Christian has a proven track record of delivering innovative solutions to complex data migration challenges and enhancing operational efficiency for clients, including consulting for state and local governments, as well as renowned companies like Tesla and Paycor.</p>
