Moved file over to react

--- a/index.html
+++ b/index.html
@@ -1,36 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Website</title>
-    <link rel="stylesheet" media="screen and (min-width: 845px)" href="stylesheet.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" media="screen and (max-width: 844px)" href="mobilestyle.css">
-</head>
-<body>
-    <div class="bannerPic">
-    </div>
-<article id="rightHalf">
-    <div class="about">
-        <p>Christian Hanson is an AWS Certified Software Engineer with expertise in building applications to handle large amounts of data using Python and JavaScript. These applications handle these various data streams through ETL / data pipelines, APIs, and cloud computing services to do data analysis, machine learning, and create data visualizations. His diverse skill set includes architecting high-performing and scalable backends with Python, creating frontend frameworks with JavaScript and HTML, and developing comprehensive automated testing frameworks.</p>
-        </div>
-        <div class="secondary_about">    
-        <p>Christian has a proven track record of delivering innovative solutions to complex data migration challenges and enhancing operational efficiency for clients, including consulting for state and local governments, as well as renowned companies like Tesla and Paycor.</p>
-        </div>
-        <div class="third_about">    
-        <p>For proof of excellence, please follow the links below to Christian's LinkedIn and Portfolio Project.</p>
-        </div>
-    <div class="social">
-    <a href="https://www.linkedin.com/in/christianhansonn/" class="fa fa-linkedin" title="LinkedIn" target="_blank"></a>
-    <!-- <a href="mailto:christian.hanson3@gmail.com" class="fa fa-google" title="Gmail" target="_blank"></a> */ -->
-    <a href="https://github.com/christianhansonn/PortfolioProject" class="fa fa-github" title="GitHub Portfolio Project" target="_blank"></a>
-    <!-- <a href="./Files/Hanson Resume.pdf" class="fa fa-file" title="Resume" target="_blank"></a> -->
-    </div>
-</article>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <title>Hanson Portfolio</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="./main.jsx"></script>
+  </body>
 </html>
